@@ -31,6 +31,7 @@
 #include "../main/trees.h"
 #include "../npc_id.h"
 #include "../compat.h"
+#include "../config.h"
 #include "gfx_flip.h"
 
 #ifdef __3DS__
@@ -1941,6 +1942,21 @@ void UpdateGraphics(bool skipRepaint)
     if(PrintFPS > 0)
         SuperPrint(fmt::format_ne("{0}", int(PrintFPS)), 1, 8, 8, 0.f, 1.f, 0.f);
     g_stats.print();
+
+    if(!BattleMode && !GameMenu && g_config.ShowEpisodeTitle && ScreenH >= 640)
+    {
+        if(g_config.ShowEpisodeTitle == 2)
+            SuperPrintScreenCenter(WorldName, 3, 20, 1.f, 1.f, 1.f, 0.5f);
+        else
+            SuperPrintScreenCenter(WorldName, 3, 20, 1.f, 1.f, 1.f, 1.f);
+    }
+    else if(!BattleMode && !GameMenu && g_config.ShowEpisodeTitle_SmallScreen && ScreenH < 620)
+    {
+        if(g_config.ShowEpisodeTitle_SmallScreen == 2)
+            SuperPrintScreenCenter(WorldName, 3, ScreenH - 60, 1.f, 1.f, 1.f, 0.5f);
+        else
+            SuperPrintScreenCenter(WorldName, 3, ScreenH - 60, 1.f, 1.f, 1.f, 1.f);
+    }
 
     if(GameOutro)
         DrawCredits();
